CHANGELOG

2013-08-14: Added some common phrases. Minor edits.
2013-08-12: Add new word {jentu'}, clarify words {'aplo'} and {qoSta'}.

2013-08-06: Add links from menu to YouTube playlists. Upgrade to: android-18, ActionBarSherlock v4.4.0, android-menudrawer v3.0.4.

2013-08-05: Minor edits.
2013-07-30: Link to "Learn Klingon" Facebook group and KAG and KIDC message boards.
2013-07-24: UI revamp - {qep'a'} edition for tablets

2013-07-09, 2013-07-19: Minor edits and fixes to some entries.
2013-06-29: Minor edits. Added Saturn.

2013-06-08, 2013-06-13: Added new word for "scroll", edited various entries.

2013-05-12: Added entries from "How to Speak Klingon".

2013-04-25: Annotated {law'/puS} constructions, added more links to YouTube.
2013-04-07: Minor updates to transitivity data.

2013-03-20: Improved Twitter support.
2013-03-19: Added ability to receive shared text intent.

2013-03-07: Edited some entries.

2013-02-23: Minor edits to transitivity data and notes.

2013-02-08: Updated icons. Improved grammatically analysis of pronouns. Improvements to transitivity and German data.

2013-02-02: Minor updates to transitivity data.

2013-01-27: Added German entries up to {ngat}. Improved transitivity data for some entries.

2013-01-23: Updated many entries, added parsing of numbers, fixed some bugs, added ability to display entries in Klingon font.

2013-01-22: Use components in analysis of sentences. Fixed bug with suffix ordering.

2013-01-20: Added links to YouTube videos showing pronunciation. Parses numbers correctly.

2013-01-15: Share button enabled.

2013-01-14: Added code for integration with social networks (only Google+ enabled for now).

2013-01-12: Added more Useful Phrases.

2013-01-09: Added links from useful phrases back to their category.

2013-01-05: Added "useful phrases" to menu.

2013-01-03: Fixed a bug with "xifan hol" mode causing some entries not to be found. Added localised German UI.

2012-12-31: Edited a few entries.  Backport.
