@@ -1055,7 +1055,7 @@ Note that {jemS:n:nolink} and {qIrq:n:nolink} do not follow not proper Klingon p
       <column name="antonyms"></column>
       <column name="see_also">{bo'Degh:n}</column>
       <column name="notes">A Klingon would recognise a Terran penguin as a {tera' jentu':n:nolink}.</column>
-      <column name="hidden_notes"></column>
+      <column name="hidden_notes">"Gentoo".</column>
       <column name="components"></column>
       <column name="examples"></column>
       <column name="search_tags">penguin</column>
