@@ -1,5 +1,6 @@
 CHANGELOG
 
+2013-08-21: Updated to latest Android support library.
 2013-08-14: Added some common phrases. Minor edits.
 2013-08-12: Add new word {jentu'}, clarify words {'aplo'} and {qoSta'}.
 
